--- a/src/index_new.css
+++ b/src/index_new.css
@@ -1,3 +1,5 @@
 /* Import du système de design global */
 @import './styles/global.css';
 
+/* Styles supplémentaires spécifiques si nécessaire */
+
